--- a/arch/arm64/configs/a1n_defconfig
+++ b/arch/arm64/configs/a1n_defconfig
@@ -320,6 +320,8 @@ CONFIG_IOSCHED_TEST=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_FIOPS=y
+# CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
 CONFIG_DEFAULT_NOOP=y
