--- a/arch/arm64/configs/nb1_defconfig
+++ b/arch/arm64/configs/nb1_defconfig
@@ -5150,3 +5150,5 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
