--- a/arch/arm64/configs/nb1_defconfig
+++ b/arch/arm64/configs/nb1_defconfig
@@ -5153,3 +5153,4 @@ CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_KLAPSE=y
