misc: add kernel systrace capability
All ATRACE_XXX trace messages are identified and parsed
at chrome tracing UI to correlate kernel activities and events
to other system and userspace events.

Enabling the capability depends on CONFIG_TRACING.

Bug: 131352179
Test: Build, flash and boot successfully.
Specific trace event is generated at the path of
/d/tracing/events/systrace/...

Change-Id: I0a7ed2f76b04124a81b5eed5d9dc97bac31f9861
Signed-off-by: Ian <ianchang@google.com>

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -585,6 +585,17 @@ config FORCE_FAST_CHARGE
 	help
 	  This drivers allows users to override default charge rate for USB.
 
+config SYSTRACE
+  def_bool y if TRACING
+  help
+    This module exports ATRACE_XXX APIs at kernel.
+    All tracepoints can be identified and plotted at Chrome tracing UI.
+
+    Use APIs exported by this module to correlate kernel activities
+    to userspace and system events in the timeline.
+
+    If in doubt, say N.
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
