Disable CONFIG_RT_GROUP_SCHED kernel config option
Android does not use per-cgroup CPU allowance for RT tasks feature.
Disable it so that RT task allowance is controlled globally using
/proc/sys/kernel/sched_rt_runtime_us.

Bug: 149954332
Test: TreeHugger
Change-Id: I63fe994732d9abb0119a79870f4c3c772db75aa7
Suggested-by: Snild Dolkow <snild@sony.com>
Signed-off-by: Suren Baghdasaryan <surenb@google.com>
Merged-In: I63fe994732d9abb0119a79870f4c3c772db75aa7

--- a/arch/arm64/configs/nb1_defconfig
+++ b/arch/arm64/configs/nb1_defconfig
@@ -4981,3 +4981,4 @@ CONFIG_OID_REGISTRY=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
+# CONFIG_RT_GROUP_SCHED is not set
