--- a/arch/arm64/configs/nb1_defconfig
+++ b/arch/arm64/configs/nb1_defconfig
@@ -1341,7 +1341,6 @@ CONFIG_BLK_DEV_SD=y
 # CONFIG_CHR_DEV_OSST is not set
 # CONFIG_BLK_DEV_SR is not set
 CONFIG_CHR_DEV_SG=y
-CONFIG_CHR_DEV_SCH=y
 CONFIG_SCSI_CONSTANTS=y
 CONFIG_SCSI_LOGGING=y
 CONFIG_SCSI_SCAN_ASYNC=y
@@ -1487,33 +1486,33 @@ CONFIG_TUN=y
 # CONFIG_NET_DSA_MV88E6XXX is not set
 # CONFIG_NET_DSA_MV88E6XXX_NEED_PPU is not set
 CONFIG_ETHERNET=y
-CONFIG_NET_VENDOR_3COM=y
+# CONFIG_NET_VENDOR_3COM is not set
 # CONFIG_VORTEX is not set
 # CONFIG_TYPHOON is not set
-CONFIG_NET_VENDOR_ADAPTEC=y
+# CONFIG_NET_VENDOR_ADAPTEC is not set
 # CONFIG_ADAPTEC_STARFIRE is not set
-CONFIG_NET_VENDOR_AGERE=y
+# CONFIG_NET_VENDOR_AGERE is not set
 # CONFIG_ET131X is not set
-CONFIG_NET_VENDOR_ALTEON=y
+# CONFIG_NET_VENDOR_ALTEON is not set
 # CONFIG_ACENIC is not set
 # CONFIG_ALTERA_TSE is not set
-CONFIG_NET_VENDOR_AMD=y
+# CONFIG_NET_VENDOR_AMD is not set
 # CONFIG_AMD8111_ETH is not set
 # CONFIG_PCNET32 is not set
 # CONFIG_AMD_XGBE is not set
-CONFIG_NET_VENDOR_ARC=y
+# CONFIG_NET_VENDOR_ARC is not set
 # CONFIG_ARC_EMAC is not set
 # CONFIG_EMAC_ROCKCHIP is not set
-CONFIG_NET_VENDOR_ATHEROS=y
+# CONFIG_NET_VENDOR_ATHEROS is not set
 # CONFIG_ATL2 is not set
 # CONFIG_ATL1 is not set
 # CONFIG_ATL1E is not set
 # CONFIG_ATL1C is not set
 # CONFIG_ALX is not set
 # CONFIG_NET_VENDOR_AURORA is not set
-CONFIG_NET_CADENCE=y
+# CONFIG_NET_CADENCE is not set
 # CONFIG_MACB is not set
-CONFIG_NET_VENDOR_BROADCOM=y
+# CONFIG_NET_VENDOR_BROADCOM is not set
 # CONFIG_B44 is not set
 # CONFIG_BCMGENET is not set
 # CONFIG_BNX2 is not set
@@ -1522,42 +1521,42 @@ CONFIG_NET_VENDOR_BROADCOM=y
 # CONFIG_BNX2X is not set
 # CONFIG_SYSTEMPORT is not set
 # CONFIG_BNXT is not set
-CONFIG_NET_VENDOR_BROCADE=y
+# CONFIG_NET_VENDOR_BROCADE is not set
 # CONFIG_BNA is not set
-CONFIG_NET_VENDOR_CAVIUM=y
+# CONFIG_NET_VENDOR_CAVIUM is not set
 # CONFIG_THUNDER_NIC_PF is not set
 # CONFIG_THUNDER_NIC_VF is not set
 # CONFIG_THUNDER_NIC_BGX is not set
 # CONFIG_LIQUIDIO is not set
-CONFIG_NET_VENDOR_CHELSIO=y
+# CONFIG_NET_VENDOR_CHELSIO is not set
 # CONFIG_CHELSIO_T1 is not set
 # CONFIG_CHELSIO_T3 is not set
 # CONFIG_CHELSIO_T4 is not set
 # CONFIG_CHELSIO_T4VF is not set
-CONFIG_NET_VENDOR_CISCO=y
+# CONFIG_NET_VENDOR_CISCO is not set
 # CONFIG_ENIC is not set
 # CONFIG_DNET is not set
-CONFIG_NET_VENDOR_DEC=y
+# CONFIG_NET_VENDOR_DEC is not set
 # CONFIG_NET_TULIP is not set
-CONFIG_NET_VENDOR_DLINK=y
+# CONFIG_NET_VENDOR_DLINK is not set
 # CONFIG_DL2K is not set
 # CONFIG_SUNDANCE is not set
-CONFIG_NET_VENDOR_EMULEX=y
+# CONFIG_NET_VENDOR_EMULEX is not set
 # CONFIG_BE2NET is not set
-CONFIG_NET_VENDOR_EZCHIP=y
+# CONFIG_NET_VENDOR_EZCHIP is not set
 # CONFIG_EZCHIP_NPS_MANAGEMENT_ENET is not set
-CONFIG_NET_VENDOR_EXAR=y
+# CONFIG_NET_VENDOR_EXAR is not set
 # CONFIG_S2IO is not set
 # CONFIG_VXGE is not set
-CONFIG_NET_VENDOR_HISILICON=y
+# CONFIG_NET_VENDOR_HISILICON is not set
 # CONFIG_HIX5HD2_GMAC is not set
 # CONFIG_HIP04_ETH is not set
 # CONFIG_HNS is not set
 # CONFIG_HNS_DSAF is not set
 # CONFIG_HNS_ENET is not set
-CONFIG_NET_VENDOR_HP=y
+# CONFIG_NET_VENDOR_HP is not set
 # CONFIG_HP100 is not set
-CONFIG_NET_VENDOR_INTEL=y
+# CONFIG_NET_VENDOR_INTEL is not set
 # CONFIG_E100 is not set
 # CONFIG_E1000 is not set
 # CONFIG_E1000E is not set
@@ -1571,89 +1570,88 @@ CONFIG_NET_VENDOR_INTEL=y
 # CONFIG_FM10K is not set
 CONFIG_NET_VENDOR_I825XX=y
 # CONFIG_JME is not set
-CONFIG_NET_VENDOR_MARVELL=y
+# CONFIG_NET_VENDOR_MARVELL is not set
 # CONFIG_MVMDIO is not set
 # CONFIG_SKGE is not set
-# CONFIG_SKY2 is not set
-CONFIG_NET_VENDOR_MELLANOX=y
+# CONFIG_NET_VENDOR_MELLANOX is not set
 # CONFIG_MLX4_EN is not set
 # CONFIG_MLX4_CORE is not set
 # CONFIG_MLX5_CORE is not set
 # CONFIG_MLXSW_CORE is not set
-CONFIG_NET_VENDOR_MICREL=y
+# CONFIG_NET_VENDOR_MICREL is not set
 # CONFIG_KS8842 is not set
 # CONFIG_KS8851 is not set
 # CONFIG_KS8851_MLL is not set
 # CONFIG_KSZ884X_PCI is not set
-CONFIG_NET_VENDOR_MICROCHIP=y
+# CONFIG_NET_VENDOR_MICROCHIP is not set
 # CONFIG_ENC28J60 is not set
 # CONFIG_ENCX24J600 is not set
 CONFIG_MSM_RMNET_MHI=y
 # CONFIG_ECM_IPA is not set
 CONFIG_RNDIS_IPA=y
-CONFIG_NET_VENDOR_MYRI=y
+# CONFIG_NET_VENDOR_MYRI is not set
 # CONFIG_MYRI10GE is not set
 # CONFIG_FEALNX is not set
-CONFIG_NET_VENDOR_NATSEMI=y
+# CONFIG_NET_VENDOR_NATSEMI is not set
 # CONFIG_NATSEMI is not set
 # CONFIG_NS83820 is not set
 CONFIG_NET_VENDOR_8390=y
 # CONFIG_NE2K_PCI is not set
-CONFIG_NET_VENDOR_NVIDIA=y
+# CONFIG_NET_VENDOR_NVIDIA is not set
 # CONFIG_FORCEDETH is not set
-CONFIG_NET_VENDOR_OKI=y
+# CONFIG_NET_VENDOR_OKI is not set
 # CONFIG_ETHOC is not set
-CONFIG_NET_PACKET_ENGINE=y
+# CONFIG_NET_PACKET_ENGINE is not set
 # CONFIG_HAMACHI is not set
 # CONFIG_YELLOWFIN is not set
-CONFIG_NET_VENDOR_QLOGIC=y
+# CONFIG_NET_VENDOR_QLOGIC is not set
 # CONFIG_QLA3XXX is not set
 # CONFIG_QLCNIC is not set
 # CONFIG_QLGE is not set
 # CONFIG_NETXEN_NIC is not set
 # CONFIG_QED is not set
-CONFIG_NET_VENDOR_QUALCOMM=y
+# CONFIG_NET_VENDOR_QUALCOMM is not set
 # CONFIG_QCA7000 is not set
-CONFIG_NET_VENDOR_REALTEK=y
+# CONFIG_NET_VENDOR_REALTEK is not set
 # CONFIG_8139CP is not set
 # CONFIG_8139TOO is not set
 # CONFIG_R8169 is not set
-CONFIG_NET_VENDOR_RENESAS=y
-CONFIG_NET_VENDOR_RDC=y
+# CONFIG_NET_VENDOR_RENESAS is not set
+# CONFIG_NET_VENDOR_RDC is not set
 # CONFIG_R6040 is not set
-CONFIG_NET_VENDOR_ROCKER=y
-CONFIG_NET_VENDOR_SAMSUNG=y
+# CONFIG_NET_VENDOR_ROCKER is not set
+# CONFIG_NET_VENDOR_SAMSUNG is not set
 # CONFIG_SXGBE_ETH is not set
-CONFIG_NET_VENDOR_SEEQ=y
-CONFIG_NET_VENDOR_SILAN=y
+# CONFIG_NET_VENDOR_SEEQ is not set
+# CONFIG_NET_VENDOR_SILAN is not set
 # CONFIG_SC92031 is not set
-CONFIG_NET_VENDOR_SIS=y
+# CONFIG_NET_VENDOR_SIS is not set
 # CONFIG_SIS900 is not set
 # CONFIG_SIS190 is not set
 # CONFIG_SFC is not set
-CONFIG_NET_VENDOR_SMSC=y
+# CONFIG_NET_VENDOR_SMSC is not set
 # CONFIG_SMC91X is not set
 # CONFIG_EPIC100 is not set
 # CONFIG_SMSC911X is not set
 # CONFIG_SMSC9420 is not set
-CONFIG_NET_VENDOR_STMICRO=y
+# CONFIG_NET_VENDOR_STMICRO is not set
 # CONFIG_STMMAC_ETH is not set
-CONFIG_NET_VENDOR_SUN=y
+# CONFIG_NET_VENDOR_SUN is not set
 # CONFIG_HAPPYMEAL is not set
 # CONFIG_SUNGEM is not set
 # CONFIG_CASSINI is not set
 # CONFIG_NIU is not set
-CONFIG_NET_VENDOR_SYNOPSYS=y
+# CONFIG_NET_VENDOR_SYNOPSYS is not set
 # CONFIG_SYNOPSYS_DWC_ETH_QOS is not set
-CONFIG_NET_VENDOR_TEHUTI=y
+# CONFIG_NET_VENDOR_TEHUTI is not set
 # CONFIG_TEHUTI is not set
-CONFIG_NET_VENDOR_TI=y
+# CONFIG_NET_VENDOR_TI is not set
 # CONFIG_TI_CPSW_ALE is not set
 # CONFIG_TLAN is not set
-CONFIG_NET_VENDOR_VIA=y
+# CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_VIA_RHINE is not set
 # CONFIG_VIA_VELOCITY is not set
-CONFIG_NET_VENDOR_WIZNET=y
+# CONFIG_NET_VENDOR_WIZNET is not set
 # CONFIG_WIZNET_W5100 is not set
 # CONFIG_WIZNET_W5300 is not set
 # CONFIG_FDDI is not set
@@ -1705,15 +1703,14 @@ CONFIG_PPPOL2TP=y
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
 CONFIG_PPP_ASYNC=y
-CONFIG_PPP_SYNC_TTY=y
 # CONFIG_SLIP is not set
 CONFIG_SLHC=y
 CONFIG_USB_NET_DRIVERS=y
 # CONFIG_USB_CATC is not set
 # CONFIG_USB_KAWETH is not set
 # CONFIG_USB_PEGASUS is not set
-# CONFIG_USB_RTL8150 is not set
-# CONFIG_USB_RTL8152 is not set
+CONFIG_USB_RTL8150=y
+CONFIG_USB_RTL8152=y
 # CONFIG_USB_LAN78XX is not set
 CONFIG_USB_USBNET=y
 CONFIG_USB_NET_AX8817X=y
@@ -1729,19 +1726,19 @@ CONFIG_USB_NET_CDC_NCM=y
 # CONFIG_USB_NET_SMSC75XX is not set
 # CONFIG_USB_NET_SMSC95XX is not set
 # CONFIG_USB_NET_GL620A is not set
-CONFIG_USB_NET_NET1080=y
+# CONFIG_USB_NET_NET1080 is not set
 # CONFIG_USB_NET_PLUSB is not set
 # CONFIG_USB_NET_MCS7830 is not set
 # CONFIG_USB_NET_RNDIS_HOST is not set
 CONFIG_USB_NET_CDC_SUBSET_ENABLE=y
-CONFIG_USB_NET_CDC_SUBSET=y
+# CONFIG_USB_NET_CDC_SUBSET is not set
 # CONFIG_USB_ALI_M5632 is not set
 # CONFIG_USB_AN2720 is not set
 CONFIG_USB_BELKIN=y
 CONFIG_USB_ARMLINUX=y
 # CONFIG_USB_EPSON2888 is not set
 # CONFIG_USB_KC2190 is not set
-CONFIG_USB_NET_ZAURUS=y
+# CONFIG_USB_NET_ZAURUS is not set
 # CONFIG_USB_NET_CX82310_ETH is not set
 # CONFIG_USB_NET_KALMIA is not set
 # CONFIG_USB_NET_QMI_WWAN is not set
@@ -1807,10 +1804,10 @@ CONFIG_INPUT_LEDS=y
 #
 # Userland interfaces
 #
-CONFIG_INPUT_MOUSEDEV=y
-CONFIG_INPUT_MOUSEDEV_PSAUX=y
-CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
-CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
+# CONFIG_INPUT_MOUSEDEV is not set
+# CONFIG_INPUT_MOUSEDEV_PSAUX is not set
+# CONFIG_INPUT_MOUSEDEV_SCREEN_X is not set
+# CONFIG_INPUT_MOUSEDEV_SCREEN_Y is not set
 # CONFIG_INPUT_JOYDEV is not set
 CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_EVBUG is not set
@@ -1823,7 +1820,7 @@ CONFIG_INPUT_KEYCOMBO=y
 CONFIG_INPUT_KEYBOARD=y
 # CONFIG_KEYBOARD_ADP5588 is not set
 # CONFIG_KEYBOARD_ADP5589 is not set
-CONFIG_KEYBOARD_ATKBD=y
+# CONFIG_KEYBOARD_ATKBD is not set
 # CONFIG_KEYBOARD_QT1070 is not set
 # CONFIG_KEYBOARD_QT2160 is not set
 # CONFIG_KEYBOARD_LKKBD is not set
@@ -1985,7 +1982,7 @@ CONFIG_GOODIX_GFX18M=y
 #
 # Hardware I/O ports
 #
-CONFIG_SERIO=y
+# CONFIG_SERIO is not set
 # CONFIG_SERIO_SERPORT is not set
 # CONFIG_SERIO_AMBAKMI is not set
 # CONFIG_SERIO_PCIPS2 is not set
@@ -2981,7 +2978,7 @@ CONFIG_SND_DRIVERS=y
 # CONFIG_SND_MTPAV is not set
 # CONFIG_SND_SERIAL_U16550 is not set
 # CONFIG_SND_MPU401 is not set
-CONFIG_SND_PCI=y
+# CONFIG_SND_PCI is not set
 # CONFIG_SND_AD1889 is not set
 # CONFIG_SND_ALS300 is not set
 # CONFIG_SND_ALI5451 is not set
@@ -3051,7 +3048,7 @@ CONFIG_SND_PCI=y
 #
 # CONFIG_SND_HDA_INTEL is not set
 CONFIG_SND_HDA_PREALLOC_SIZE=64
-CONFIG_SND_SPI=y
+# CONFIG_SND_SPI is not set
 CONFIG_SND_USB=y
 CONFIG_SND_USB_AUDIO=y
 # CONFIG_SND_USB_UA101 is not set
@@ -3225,7 +3222,6 @@ CONFIG_HID_APPLE=y
 # CONFIG_HID_CYPRESS is not set
 # CONFIG_HID_DRAGONRISE is not set
 # CONFIG_HID_EMS_FF is not set
-CONFIG_HID_ELECOM=y
 # CONFIG_HID_ELO is not set
 # CONFIG_HID_EZKEY is not set
 # CONFIG_HID_GEMBIRD is not set
@@ -3246,7 +3242,6 @@ CONFIG_HID_ELECOM=y
 CONFIG_HID_MAGICMOUSE=y
 CONFIG_HID_MICROSOFT=y
 # CONFIG_HID_MONTEREY is not set
-CONFIG_HID_MULTITOUCH=y
 # CONFIG_HID_NINTENDO is not set
 # CONFIG_HID_NTRIG is not set
 # CONFIG_HID_ORTEK is not set
@@ -3271,7 +3266,7 @@ CONFIG_HID_PLANTRONICS=y
 # CONFIG_HID_TOPSEED is not set
 # CONFIG_HID_THINGM is not set
 # CONFIG_HID_THRUSTMASTER is not set
-# CONFIG_HID_WACOM is not set
+CONFIG_HID_WACOM=y
 # CONFIG_HID_WIIMOTE is not set
 # CONFIG_HID_XINMO is not set
 # CONFIG_HID_ZEROPLUS is not set
@@ -3385,9 +3380,6 @@ CONFIG_USB_DWC3_PCI=y
 CONFIG_USB_DWC3_QCOM=y
 # CONFIG_USB_DWC2 is not set
 # CONFIG_USB_CHIPIDEA is not set
-CONFIG_USB_ISP1760=y
-CONFIG_USB_ISP1760_HCD=y
-CONFIG_USB_ISP1760_HOST_ROLE=y
 # CONFIG_USB_ISP1760_GADGET_ROLE is not set
 # CONFIG_USB_ISP1760_DUAL_ROLE is not set
 
