--- a/arch/arm64/configs/nb1_defconfig
+++ b/arch/arm64/configs/nb1_defconfig
@@ -273,7 +273,6 @@ CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
 # CONFIG_MODULE_FORCE_LOAD is not set
 CONFIG_MODULE_UNLOAD=y
-CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 # CONFIG_MODULE_SRCVERSION_ALL is not set
 # CONFIG_MODULE_SIG is not set
@@ -315,7 +314,7 @@ CONFIG_BLOCK_COMPAT=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_TEST=y
+# CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
@@ -475,7 +474,6 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_FRONTSWAP is not set
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
-CONFIG_CMA_DEBUGFS=y
 CONFIG_CMA_AREAS=7
 # CONFIG_ZPOOL is not set
 # CONFIG_ZBUD is not set
@@ -1264,7 +1262,6 @@ CONFIG_QSEECOM=y
 CONFIG_HDCP_QSEECOM=y
 # CONFIG_PROFILER is not set
 CONFIG_UID_SYS_STATS=y
-CONFIG_QPNP_MISC=y
 # CONFIG_UID_SYS_STATS_DEBUG is not set
 # CONFIG_MEMORY_STATE_TIME is not set
 # CONFIG_C2PORT is not set
@@ -1764,7 +1761,6 @@ CONFIG_ATH_CARDS=y
 # CONFIG_ATH_REG_DYNAMIC_USER_REG_HINTS is not set
 # CONFIG_ATH5K_PCI is not set
 # CONFIG_ATH6KL is not set
-# CONFIG_WIL6210 is not set
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IPW2100 is not set
@@ -2075,7 +2071,6 @@ CONFIG_HW_RANDOM_MSM_LEGACY=y
 # CONFIG_MSM_SMD_PKT is not set
 # CONFIG_XILLYBUS is not set
 CONFIG_MSM_ADSPRPC=y
-# CONFIG_MSM_RDBG is not set
 
 #
 # I2C support
@@ -2371,7 +2366,6 @@ CONFIG_SMB138X_CHARGER=y
 # CONFIG_QPNP_QNOVO is not set
 # CONFIG_POWER_AVS is not set
 CONFIG_MSM_PM=y
-CONFIG_APSS_CORE_EA=y
 CONFIG_MSM_APM=y
 CONFIG_MSM_IDLE_STATS=y
 CONFIG_MSM_IDLE_STATS_FIRST_BUCKET=62500
@@ -2695,7 +2689,6 @@ CONFIG_REGULATOR_RPM_SMD=y
 CONFIG_REGULATOR_QPNP=y
 CONFIG_REGULATOR_QPNP_LABIBB=y
 CONFIG_REGULATOR_QPNP_LCDB=y
-# CONFIG_REGULATOR_QPNP_OLEDB is not set
 CONFIG_REGULATOR_SPM=y
 # CONFIG_REGULATOR_CPR is not set
 # CONFIG_REGULATOR_CPR2_GFX is not set
@@ -2716,7 +2709,6 @@ CONFIG_MEDIA_SUPPORT=y
 #
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 # CONFIG_MEDIA_ANALOG_TV_SUPPORT is not set
-# CONFIG_MEDIA_DIGITAL_TV_SUPPORT is not set
 # CONFIG_MEDIA_RADIO_SUPPORT is not set
 # CONFIG_MEDIA_SDR_SUPPORT is not set
 # CONFIG_MEDIA_RC_SUPPORT is not set
@@ -2748,9 +2740,7 @@ CONFIG_V4L_PLATFORM_DRIVERS=y
 # QTI MSM Camera And Video & AIS
 #
 CONFIG_MSM_CAMERA=y
-CONFIG_MSM_CAMERA_DEBUG=y
 CONFIG_MSMB_CAMERA=y
-CONFIG_MSMB_CAMERA_DEBUG=y
 CONFIG_MSM_CAMERA_SENSOR=y
 CONFIG_MSM_CPP=y
 CONFIG_MSM_CCI=y
@@ -2783,7 +2773,6 @@ CONFIG_MSM_VIDC_V4L2=y
 CONFIG_MSM_VIDC_VMEM=y
 CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
-CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG=y
 # CONFIG_MSM_AIS is not set
 # CONFIG_TSPP is not set
 
@@ -3976,7 +3965,6 @@ CONFIG_GPIO_USB_DETECT=y
 CONFIG_MSM_MHI=y
 CONFIG_MSM_MHI_UCI=y
 # CONFIG_MSM_MHI_DEBUG is not set
-CONFIG_SEEMP_CORE=y
 CONFIG_USB_BAM=y
 CONFIG_MSM_EXT_DISPLAY=y
 # CONFIG_SDIO_QCN is not set
@@ -4058,7 +4046,6 @@ CONFIG_MSM_SPCOM=y
 CONFIG_MSM_SPSS_UTILS=y
 CONFIG_MSM_SMEM_LOGGING=y
 CONFIG_MSM_SMP2P=y
-CONFIG_MSM_SMP2P_TEST=y
 CONFIG_MSM_QMI_INTERFACE=y
 # CONFIG_MSM_L2_IA_DEBUG is not set
 CONFIG_MSM_RPM_SMD=y
@@ -4454,7 +4441,6 @@ CONFIG_ARM_PSCI_FW=y
 # CONFIG_ISCSI_IBFT is not set
 CONFIG_QCOM_SCM_64=y
 CONFIG_HAVE_ARM_SMCCC=y
-CONFIG_MSM_TZ_LOG=y
 # CONFIG_BIF is not set
 CONFIG_SENSORS_SSC=y
 # CONFIG_TEE is not set
@@ -4868,7 +4854,6 @@ CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_STRICT_DEVMEM is not set
 # CONFIG_PID_IN_CONTEXTIDR is not set
 # CONFIG_ARM64_RANDOMIZE_TEXT_OFFSET is not set
-CONFIG_DEBUG_SET_MODULE_RONX=y
 CONFIG_DEBUG_RODATA=y
 CONFIG_DEBUG_ALIGN_RODATA=y
 # CONFIG_FORCE_PAGES is not set
