--- a/arch/arm64/configs/nb1_defconfig
+++ b/arch/arm64/configs/nb1_defconfig
@@ -321,6 +321,8 @@ CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_ANXIETY=y
+# CONFIG_DEFAULT_ANXIETY is not set
 # CONFIG_DEFAULT_ZEN is not set
 # CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_DEADLINE is not set
