{a1n,nb1}_defconfig: Enable input boost

--- a/arch/arm64/configs/a1n_defconfig
+++ b/arch/arm64/configs/a1n_defconfig
@@ -2498,6 +2498,10 @@ CONFIG_THERMAL_GOV_STEP_WISE=y
 # CONFIG_THERMAL_GOV_POWER_ALLOCATOR is not set
 CONFIG_CPU_THERMAL=y
 # CONFIG_DEVFREQ_THERMAL is not set
+CONFIG_DEVFREQ_BOOST=y
+CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=64
+CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=1000
+CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=2929
 # CONFIG_THERMAL_EMULATION is not set
 CONFIG_LIMITS_MONITOR=y
 CONFIG_LIMITS_LITE_HW=y
@@ -5132,4 +5136,4 @@ CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_KLAPSE=y
-
+CONFIG_BOEFFLA_WL_BLOCKER=y
