--- a/arch/arm64/configs/nb1_defconfig
+++ b/arch/arm64/configs/nb1_defconfig
@@ -2518,6 +2518,10 @@ CONFIG_THERMAL_GOV_STEP_WISE=y
 # CONFIG_THERMAL_GOV_POWER_ALLOCATOR is not set
 CONFIG_CPU_THERMAL=y
 # CONFIG_DEVFREQ_THERMAL is not set
+CONFIG_DEVFREQ_BOOST=y
+CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=64
+CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=1000
+CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=2929
 # CONFIG_THERMAL_EMULATION is not set
 CONFIG_LIMITS_MONITOR=y
 CONFIG_LIMITS_LITE_HW=y
