--- a/sound/soc/msm/Kconfig
+++ b/sound/soc/msm/Kconfig
@@ -260,4 +260,8 @@ config SND_SOC_SDM660_COMMON
 	 the machine driver and the corresponding
 	 DAI-links
 
+config SND_SOURCE_TRACKING_CTRLS
+	bool "Enable sound source tracking controls"
+	default y
+	depends on SND_SOC_MSM_QDSP6V2_INTF || SND_SOC_QDSP6V2_VM
 endmenu
