--- a/arch/arm64/configs/nb1_defconfig
+++ b/arch/arm64/configs/nb1_defconfig
@@ -2030,10 +2030,8 @@ CONFIG_SERIAL_EARLYCON=y
 # CONFIG_SERIAL_MAX310X is not set
 # CONFIG_SERIAL_UARTLITE is not set
 CONFIG_SERIAL_CORE=y
-CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_SERIAL_JSM is not set
-CONFIG_SERIAL_MSM=y
-CONFIG_SERIAL_MSM_CONSOLE=y
+# CONFIG_SERIAL_MSM is not set
 CONFIG_SERIAL_MSM_HS=y
 # CONFIG_SERIAL_SCCNXP is not set
 # CONFIG_SERIAL_SC16IS7XX is not set
