nb1_defconfig: disable per-cgroup pressure tracking
Disable per-cgroup psi tracking to prevent unnecessary overhead since
Android does not use per-cgroup psi information.

Signed-off-by: Srinivasarao P <spathi@codeaurora.org>
Signed-off-by: Radu Vasilascu <glx33807@gmail.com>

--- a/arch/arm64/configs/nb1_defconfig
+++ b/arch/arm64/configs/nb1_defconfig
@@ -514,7 +514,8 @@ CONFIG_ARM64_MODULE_CMODEL_LARGE=y
 #
 # Boot options
 #
-CONFIG_CMDLINE=""
+CONFIG_CMDLINE="cgroup_disable=pressure"
+CONFIG_CMDLINE_EXTEND=y
 # CONFIG_EFI is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 CONFIG_IMG_GZ_DTB=y
