defconfig: regen and disable SYNAPTICS_DSX
NB1 doesn't have it - it has SIW_TOUCH

Signed-off-by: Radu Vasilascu <glx33807@gmail.com>

--- a/arch/arm64/configs/nb1_defconfig
+++ b/arch/arm64/configs/nb1_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.274 Kernel Configuration
+# Linux/arm64 4.4.285 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -218,6 +218,7 @@ CONFIG_SLUB_CPU_PARTIAL=y
 # CONFIG_SYSTEM_DATA_VERIFICATION is not set
 CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
+# CONFIG_KPROBES is not set
 CONFIG_JUMP_LABEL=y
 # CONFIG_STATIC_KEYS_SELFTEST is not set
 # CONFIG_UPROBES is not set
@@ -402,6 +403,7 @@ CONFIG_ARM64_ERRATUM_824069=y
 CONFIG_ARM64_ERRATUM_819472=y
 CONFIG_ARM64_ERRATUM_832075=y
 CONFIG_ARM64_ERRATUM_845719=y
+CONFIG_ARM64_ERRATUM_843419=y
 CONFIG_ARM64_ERRATUM_1024718=y
 CONFIG_CAVIUM_ERRATUM_22375=y
 CONFIG_CAVIUM_ERRATUM_23154=y
@@ -497,6 +499,7 @@ CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
+# CONFIG_ARM64_SW_TTBR0_PAN is not set
 
 #
 # ARMv8.1 architectural features
@@ -505,6 +508,7 @@ CONFIG_SETEND_EMULATION=y
 # CONFIG_ARM64_PAN is not set
 # CONFIG_ARM64_LSE_ATOMICS is not set
 # CONFIG_ARM64_UAO is not set
+CONFIG_ARM64_MODULE_CMODEL_LARGE=y
 # CONFIG_RANDOMIZE_BASE is not set
 
 #
@@ -593,6 +597,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
@@ -621,6 +626,7 @@ CONFIG_NET_INGRESS=y
 CONFIG_PACKET=y
 # CONFIG_PACKET_DIAG is not set
 CONFIG_UNIX=y
+CONFIG_UNIX_SCM=y
 # CONFIG_UNIX_DIAG is not set
 CONFIG_XFRM=y
 CONFIG_XFRM_ALGO=y
@@ -1062,6 +1068,7 @@ CONFIG_XPS=y
 # CONFIG_CGROUP_NET_CLASSID is not set
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_BQL=y
+# CONFIG_BPF_JIT is not set
 CONFIG_NET_FLOW_LIMIT=y
 CONFIG_SOCKEV_NLMCAST=y
 
@@ -1779,18 +1786,7 @@ CONFIG_JOYSTICK_XPAD_FF=y
 CONFIG_JOYSTICK_XPAD_LEDS=y
 # CONFIG_INPUT_TABLET is not set
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX=y
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C is not set
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI=y
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C is not set
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING=y
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_PROXIMITY is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_ACTIVE_PEN is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_GESTURE is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_VIDEO is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX is not set
 
 #
 # SiW Touch Support
@@ -1855,7 +1851,6 @@ CONFIG_OF_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_SX8654 is not set
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_ZFORCE is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_EXTRA_SYSFS is not set
 # CONFIG_TOUCHSCREEN_ROHM_BU21023 is not set
 # CONFIG_TOUCHSCREEN_MAXIM_STI is not set
 # CONFIG_TOUCHSCREEN_GEN_VKEYS is not set
@@ -2079,6 +2074,7 @@ CONFIG_I2C_HELPER_AUTO=y
 # Other I2C/SMBus bus drivers
 #
 CONFIG_I2C_MSM_V2=y
+# CONFIG_I2C_STUB is not set
 # CONFIG_I2C_SLAVE is not set
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
@@ -3345,7 +3341,6 @@ CONFIG_USB_CONFIGFS_NCM=y
 # CONFIG_USB_CONFIGFS_ECM_SUBSET is not set
 # CONFIG_USB_CONFIGFS_QCRNDIS is not set
 # CONFIG_USB_CONFIGFS_RNDIS is not set
-# CONFIG_USB_CONFIGFS_RMNET_BAM is not set
 # CONFIG_USB_CONFIGFS_EEM is not set
 CONFIG_USB_CONFIGFS_MASS_STORAGE=y
 # CONFIG_USB_CONFIGFS_F_LB_SS is not set
@@ -3645,6 +3640,9 @@ CONFIG_UIO_MSM_SHAREDMEM=y
 #
 CONFIG_STAGING=y
 # CONFIG_PRISM2_USB is not set
+# CONFIG_COMEDI is not set
+# CONFIG_RTL8192U is not set
+# CONFIG_RTLLIB is not set
 # CONFIG_R8712U is not set
 # CONFIG_R8188EU is not set
 # CONFIG_R8723AU is not set
@@ -3765,6 +3763,8 @@ CONFIG_ION_MSM=y
 # CONFIG_ALLOC_BUFFERS_IN_4K_CHUNKS is not set
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_WIMAX_GDM72XX is not set
+# CONFIG_LTE_GDM724X is not set
+# CONFIG_LUSTRE_FS is not set
 # CONFIG_DGNC is not set
 # CONFIG_DGAP is not set
 # CONFIG_GS_FPGABOOT is not set
@@ -3777,31 +3777,7 @@ CONFIG_ION_MSM=y
 # Qualcomm Atheros CLD WLAN module
 #
 CONFIG_QCA_CLD_WLAN=y
-# CONFIG_QCACLD_WLAN_LFR3 is not set
-# CONFIG_PRIMA_WLAN_OKC is not set
-# CONFIG_PRIMA_WLAN_11AC_HIGH_TP is not set
-# CONFIG_WLAN_FEATURE_11W is not set
-# CONFIG_WLAN_FEATURE_LPSS is not set
-# CONFIG_QCOM_VOWIFI_11R is not set
-# CONFIG_QCACLD_FEATURE_NAN is not set
-# CONFIG_QCACLD_FEATURE_GREEN_AP is not set
-# CONFIG_HELIUMPLUS is not set
-# CONFIG_QCOM_TDLS is not set
-# CONFIG_QCOM_LTE_COEX is not set
-# CONFIG_MPC_UT_FRAMEWORK is not set
-# CONFIG_WLAN_OFFLOAD_PACKETS is not set
-# CONFIG_WLAN_FASTPATH is not set
-# CONFIG_WLAN_NAPI is not set
-# CONFIG_WLAN_TX_FLOW_CONTROL_V2 is not set
-# CONFIG_WLAN_SYNC_TSF is not set
-# CONFIG_LFR_SUBNET_DETECTION is not set
-# CONFIG_MCC_TO_SCC_SWITCH is not set
-# CONFIG_QCACLD_WLAN_LFR2 is not set
-# CONFIG_WLAN_FEATURE_DISA is not set
-# CONFIG_WLAN_SPECTRAL_SCAN is not set
-# CONFIG_ICMP_DISABLE_PS is not set
-# CONFIG_CONFIG_BUILD_TIMESTAMP is not set
-# CONFIG_WLAN_FEATURE_SARV1_TO_SARV2 is not set
+CONFIG_QCA_CLD_WLAN_PROFILE="default"
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
 
@@ -3815,7 +3791,6 @@ CONFIG_SPS=y
 CONFIG_SPS_SUPPORT_NDP_BAM=y
 # CONFIG_EP_PCIE is not set
 # CONFIG_IPA is not set
-# CONFIG_RMNET_IPA is not set
 CONFIG_GSI=y
 CONFIG_IPA3=y
 CONFIG_RMNET_IPA3=y
@@ -4676,6 +4651,8 @@ CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 # CONFIG_TEST_LIST_SORT is not set
 # CONFIG_BACKTRACE_SELF_TEST is not set
 # CONFIG_RBTREE_TEST is not set
+# CONFIG_INTERVAL_TREE_TEST is not set
+# CONFIG_PERCPU_TEST is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_TEST_HEXDUMP is not set
 # CONFIG_TEST_STRING_HELPERS is not set
@@ -4684,9 +4661,13 @@ CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 # CONFIG_TEST_RHASHTABLE is not set
 # CONFIG_TEST_HASH is not set
 # CONFIG_DMA_API_DEBUG is not set
+# CONFIG_TEST_LKM is not set
+# CONFIG_TEST_USER_COPY is not set
+# CONFIG_TEST_BPF is not set
 # CONFIG_TEST_FIRMWARE is not set
 # CONFIG_TEST_UDELAY is not set
 # CONFIG_MEMTEST is not set
+# CONFIG_TEST_STATIC_KEYS is not set
 # CONFIG_PANIC_ON_DATA_CORRUPTION is not set
 # CONFIG_BUG_ON_DATA_CORRUPTION is not set
 # CONFIG_CC_WERROR is not set
@@ -4699,6 +4680,7 @@ CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_STRICT_DEVMEM is not set
 # CONFIG_PID_IN_CONTEXTIDR is not set
 # CONFIG_ARM64_RANDOMIZE_TEXT_OFFSET is not set
+# CONFIG_DEBUG_SET_MODULE_RONX is not set
 CONFIG_DEBUG_RODATA=y
 CONFIG_DEBUG_ALIGN_RODATA=y
 # CONFIG_FORCE_PAGES is not set
@@ -4785,6 +4767,7 @@ CONFIG_CRYPTO_WORKQUEUE=y
 CONFIG_CRYPTO_CRYPTD=y
 # CONFIG_CRYPTO_MCRYPTD is not set
 CONFIG_CRYPTO_AUTHENC=y
+# CONFIG_CRYPTO_TEST is not set
 CONFIG_CRYPTO_ABLK_HELPER=y
 
 #
