nb1_defconfig: disable CONFIG_AOD_FEATURE
It's only used on stock when Glance is enabled.

Signed-off-by: Radu Vasilascu <glx33807@gmail.com>

--- a/arch/arm64/configs/nb1_defconfig
+++ b/arch/arm64/configs/nb1_defconfig
@@ -2829,7 +2829,7 @@ CONFIG_FB_MSM=y
 # CONFIG_FB_SIMPLE is not set
 # CONFIG_MSM_DBA is not set
 CONFIG_FIH_PANEL_FEATURE=y
-CONFIG_AOD_FEATURE=y
+# CONFIG_AOD_FEATURE is not set
 CONFIG_PANEL_POWER_CONTROL_FEATURE=y
 # CONFIG_PANEL_COLOR_MANAGERIAL is not set
 CONFIG_FB_MSM_MDSS_COMMON=y
