nb1_defconfig: disable SND_SOURCE_TRACKING_CTRLS

--- a/arch/arm64/configs/nb1_defconfig
+++ b/arch/arm64/configs/nb1_defconfig
@@ -2944,6 +2944,7 @@ CONFIG_SND_SOC_CPE=y
 # CONFIG_SND_SOC_EXT_CODEC is not set
 # CONFIG_SND_SOC_MSM8996_VM is not set
 CONFIG_SND_SOC_MSM8998=y
+# CONFIG_SND_SOURCE_TRACKING_CTRLS is not set
 # CONFIG_SND_SOC_QCOM is not set
 
 #
