dts: msm8998: add reg-names to qcom,lpass
Fixes:
[    1.456627] subsys-pil-tz 17300000.qcom,lpass: invalid resource
[    1.456634] subsys-pil-tz 17300000.qcom,lpass: Failed to iomap base register
[    2.407507] subsys-pil-tz 17300000.qcom,lpass: invalid resource
[    2.407513] subsys-pil-tz 17300000.qcom,lpass: Failed to iomap base register

Signed-off-by: Radu Vasilascu <glx33807@gmail.com>

--- a/arch/arm/boot/dts/qcom/msm8998.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8998.dtsi
@@ -2145,6 +2145,7 @@
 	qcom,lpass@17300000 {
 		compatible = "qcom,pil-tz-generic";
 		reg = <0x17300000 0x00100>;
+		reg-names = "base_reg";
 		interrupts = <0 162 1>;
 
 		vdd_cx-supply = <&pm8998_s1_level>;
